Fixed typo in index.erb

--- a/app/views/documentation/index.erb
+++ b/app/views/documentation/index.erb
@@ -8,7 +8,7 @@
   <div id="doc-wrapper">
 
     <div id="doc-header">
-      <a href="<%= SETTINGS.logo_path %>" target="_blank"><img src="<%= SETTINGS.logo_image %>" alt="Datapipe" /></a>
+      <a href="<%= SETTINGS.logo_path %>" target="_blank"><img src="<%= SETTINGS.logo_image %>"/></a>
     </div>
     <div id="doc-navigation">
       
