--- a/app/views/shared/_doc_nav_widgets.html.haml
+++ b/app/views/shared/_doc_nav_widgets.html.haml
@@ -1,2 +1,2 @@
-%li{'data-addclass-active' => 'true'}
+%li#documentation{:class => active_if(controller_name == "documentation" && action_name == "index")}
   = link_to link_name, my_link
